--- a/src/ModeloCozinhaIndustrial/XUnitTestProject1/ModeloCozinhaIndustrialExemplo2.csproj
+++ b/src/ModeloCozinhaIndustrial/XUnitTestProject1/ModeloCozinhaIndustrialExemplo2.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LightBDD.MsTest2" Version="2.4.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.4.0-beta" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.4.0-beta" />
   </ItemGroup>
 
 </Project>
